Narrow api